--- a/.github/actions/compile-index/action.yml
+++ b/.github/actions/compile-index/action.yml
@@ -36,9 +36,11 @@ inputs:
     description: Path where index entries are available.
     required: false
     default: ./index
-outputs:
-  commit-message:
-    description: Git commit message to commit changed index.
+  gallery-json-path:
+    description: |
+      File path where gallery JSON index should be saved. If left empty (default), 
+      the file will not be produced.
+    required: false
 runs:
   using: node12
   main: dist/index.js
