--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -53,7 +53,10 @@ jobs:
           $($pkgids -join "`n")
           "@ > ../commit.txt
           git add *.yml
+          git config user.email "BSData-bot@users.noreply.github.com"
+          git config user.name "BSData-bot"
           git commit -F ../commit.txt
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           git push
       - name: Get release upload_url (and delete old asset if found)
         uses: actions/github-script@0.4.0
