--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -38,7 +38,7 @@ jobs:
         shell: pwsh
         working-directory: ./index
         run: |
-          $GITHUB_SHA > sha.txt # save master's SHA to associate branches
+          "master-sha: $env:GITHUB_SHA" > master-sha.yml # save master's SHA to associate branches
           $pkgids = @((git status --porcelain | % { $_.Substring(3) } | Split-Path -Leaf) -replace '\.catpkg\.yml$','')
           if ($pkgids.Length -eq 0) {
             Write-Host 'No changes in the index' -ForegroundColor Green
