--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -1,7 +1,7 @@
 name: Update index
 on:
   schedule:
-    - cron: '0 12 * * *' # every day at 12:00 UTC
+    - cron: '0 * * * *' # every day at 12:00 UTC
   push:
     branches:
       - master
