--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -61,7 +61,7 @@ jobs:
 
           $($pkgids -join "`n")
           "@ > ../commit.txt
-          git add ./*.yml
+          git add -A *.yml
           git config user.email "BSData-bot@users.noreply.github.com"
           git config user.name "BSData-bot"
           git commit -F ../commit.txt
